fix: change hover and letter-spacing

--- a/singolo2.css
+++ b/singolo2.css
@@ -26,22 +26,30 @@
 .portfolio h2 {
   font-weight: 900;
   font-size: 30px;
-  line-height: 30px;
+  line-height: 23px;
   color: #666d89;
-  margin: 0;
+  margin: 0px;
+  letter-spacing: 0.22px;
 }
 
 .portfolio p {
   font-weight: 300;
   font-size: 18px;
-  line-height: 30px;
+  line-height: 13px;
   color: #767e9e;
+}
+
+
+.menu {
+  width: 287px;
+  padding-left: 1px;
+  margin-top: 0px;
+  padding-bottom: 19px;
 }
 
 .portfolio-menu {
   list-style-type: none;
   display: flex;
-  width: 287px;
   justify-content: space-between;
   padding-left: 0px;
 }
@@ -49,20 +57,21 @@
 .portfolio-menu li {
   font-weight: 400;
   font-size: 12px;
-  line-height: 12px;
+  line-height: 8px;
 }
 
 .portfolio-menu li a {
-  color: #dedede;
+  color: #767e9e;
   text-decoration: none;
   display: inline-block;
-  padding: 5px;
+  padding: 6px;
   border: 1px solid #666d89;
   border-radius: 5px;
 }
 
 .portfolio-menu li a:hover {
- opacity: 0.5;
+  color: #dedede;
+  border: 1px solid #c5c5c5;
 }
 
 .portfolio-images {
